# obelix

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  obelix  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: categories.py  configurations.py  encode.py  link16.py  scenario_templates.py  scenarios.py  send.py  storage.py
backend/app/asterix/: base.py  registry.py  uap.py
backend/app/core/: config.py  configuration_storage.py  link16_configuration_storage.py  link16_scenario_runner.py  link16_scenario_storage.py  motion.py  scenario_runner.py  storage.py
backend/app/link16/: base.py  help_content.py  jreap.py  registry.py
backend/app/models/: category_send.py  link16_message_send.py  link16_schemas.py  schemas.py
backend/app/scenarios/: geo.py  templates.py
backend/app/transport/: sender.py
backend/tests/: README.md  __init__.py  conftest.py
backend/tests/frontend/: conftest.py
backend/tests/integration/: test_api_inprocess.py  test_api_link16.py  test_api_live.py  test_api_send_categories.py  test_scenario_file_download.py  test_scenario_validate.py
configurations/: README.md
configurations/cat015/: incs-range-plot.json
configurations/cat016/: incs-system-config.json
configurations/cat021/: adsb-cooperative.json
configurations/cat034/: north-marker.json
configurations/cat048/: basic-plot.json
configurations/cat062/: system-track-wgs84.json
configurations/cat065/: sdps-operational.json
configurations/cat240/: video-radial-low.json
data/templates/: north-marker-default.json
docs/: architecture.md  development.md  setup.md  usage.md  wireshark-asterix.md  wireshark-docker-usecase.md  wireshark-install.md  wireshark-link16.md
docs/categories/: README.md  cat015.md  cat016.md  cat021.md  cat034.md  cat048.md  cat062.md  cat065.md  cat240.md
docs/course/: README.md
docs/link16/: README.md  j3-2.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js  link16.js  markdown.js  motion.js  navigation.js  scenario-io.js  scenario-templates.js
scenarios/: README.md
scenarios/link16/: README.md
scenarios/shared/: baltic-combined.json  jas-bromma-visby.json  mig-kaliningrad-visby.json
scripts/: capture_course_screenshots.py  test.sh  udp-receiver.py
(+94 files in other folders)
