[project]
name = "obelix"
version = "0.1.0"
description = "Web-based tool for creating, editing and sending ASTERIX messages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
markers = [
    "unit: pure unit tests with no external I/O",
    "integration: tests that exercise API boundaries",
    "live: integration tests against a running server (skipped if unreachable)",
    "slow: long-running tests",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient`:DeprecationWarning",
]
